[Bug #18014] Add assertion to verify freelist

This commit adds an assertion has been added after `gc_page_sweep` to
verify that the freelist length is equal to the number of free slots in
the page.